# PyCppContainers

./: .gitignore  CMakeLists.txt  HISTORY.md  Perfromance_A.ods  README.md  TODO.md  build_all.sh  conftest.py  main.cpp  pytest.ini  requirements-dev.txt  reserve_string_with.txt  reserve_with.txt  setup.py  tests_release.txt
docs/: PyCppContainers.dox  PythonCppContainers.dox  PythonCppHomogeneousContainers.dox
docs/sphinx/source/: build_test.rst  conf.py  cpp_api.rst  design.rst  examples_by_container.rst  history.rst  index.rst  introduction.rst  performance.rst  usage.rst  user_defined_types.rst
docs/sphinx/source/performance/: performance_cpp.rst  performance_memory.rst  performance_roundtrip.rst  performance_summary.rst
docs/sphinx/source/plots/: cpp_py_dict_bytes_unordered_map_vector_char.plt  cpp_py_dict_int_float_unordered_map_long_double.plt  cpp_py_dict_str_unordered_map_string.plt  cpp_py_list_bool_int_float_vector_bool_long_double.plt  cpp_py_list_bytes_vector_string.plt  cpp_py_list_bytes_vector_vector_char.plt  cpp_py_list_str16_vector_u16string.plt  cpp_py_list_str32_vector_u32string.plt  cpp_py_list_str_vector_string.plt  cpp_py_set_bytes_set_vector_char.plt  cpp_py_set_dict_bytes_set_map_string.plt  cpp_py_set_int_float_unordered_set_long_double.plt  cpp_py_set_str16_set_u16string.plt  cpp_py_set_str32_set_u32string.plt  cpp_py_set_str_set_string.plt  cpp_py_tuple_bool_int_float_vector_bool_long_double.plt  cpp_py_tuple_bytes_vector_string.plt  cpp_py_tuple_bytes_vector_vector_char.plt  cpp_py_tuple_list_bytes_vector_string.plt  cpp_py_tuple_str_vector_string.plt  cpp_time_vs_size_set_dict.plt  cpp_time_vs_size_tuple_list.plt  dict_bytes_roundtrip.plt  dict_int_roundtrip.plt  fundamental_bytes.plt  fundamental_cpp_to_py_string_8_16_32.plt  fundamental_py_to_cpp_string_8_16_32.plt  fundamental_string_8_16_32.plt  list_bytes_roundtrip.plt  list_float_int_roundtrip.plt  py_tuple_bytes_to_vector_string.plt  pymemtrace_dict_bytes.plt  pymemtrace_dict_str.plt  pymemtrace_list_bool.plt  pymemtrace_list_bytes.plt  pymemtrace_list_float.plt  pymemtrace_list_set_dict_bytes_one_item.plt  pymemtrace_new_bytes.plt  pymemtrace_new_str.plt  pymemtrace_new_str16.plt  (+37 more)
docs/test_results/: mac_mini_B_vector_string.txt
perf_notes/: Comparison_bytes_as_string.txt  DifferentStringWordSizes.txt  MemoryLeakInPySet_Add.txt  NewPerformanceFundementalTypes.txt  Perfromance_A.ods  PythonCppHomogeneousContainers.txt  cpp_test_results.txt  find_unused_dat_files.py  list.txt  master_perf_0.3.0_macbook.txt  perf_mac_mini_B.txt  perf_macbook_pro.txt  python_test_results.txt  reserve_no.txt  reserve_string_no.txt  support_py_str_mac_book_pro.txt  support_py_str_mac_min_B.txt  test_perf_cPyCppContainers_MacBookPro.txt  test_perf_cPyCppContainers_MacMiniB.txt  u16_u32_memcpy.txt  u16_u32_original.txt  write_dat_files.py  write_dat_files_for_cpp_test_results.py  write_dat_files_for_python_test_results.py
src/: PyMemAllocator.cpp  ReadMe.md  TestFramework.cpp  TestFramework.h  auto_py_convert_internal.cpp  auto_py_convert_internal.h  code_gen.py  get_rss.cpp  get_rss.h  main.cpp  python_convert.cpp  python_convert.h  save_stream_state.h  test_common.cpp  test_common.h  test_functional.cpp  test_functional.h  test_memory.cpp  test_memory.h  test_performance.cpp  test_performance.h
src/cpp/: TestFramework.cpp  TestFramework.h  get_rss.cpp  get_rss.h  save_stream_state.h
src/cpy/: PyMemAllocator.cpp  PyMemAllocator.h  auto_py_convert_internal.cpp  auto_py_convert_internal.h  code_gen.py  code_gen_documentation.py  python_container_convert.cpp  python_container_convert.h  python_convert.cpp  python_convert.h  python_convert_scrap.h  python_object_convert.cpp  python_object_convert.h
src/cpy/tests/: test_common.cpp  test_common.h  test_functional.cpp  test_functional.h  test_internal.cpp  test_internal.h  test_memory.cpp  test_memory.h  test_performance.cpp  test_performance.h
src/ext/: cDictIter.cpp  cPyCppContainers.cpp  cUserDefined.cpp  cUserDefined.h  custom3_Python3.9.0.c  custom_3_Python3.9.0.c
src/py/: code_gen.py  code_gen_common.py  code_gen_documentation.py
tests/unit/: test_cPyCppContainers.py  test_cUserDefined.py  test_perf_cPyCppContainers.py  test_with_pymemtrace.py
